[tool.poetry]
name = "pyjail-ad"
version = "0.1.0"
description = ""
authors = ["maple3142 <kirby741852963@gmail.com>"]
readme = "README.md"
packages = [{include = "pyjail_ad"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
epicbox = "^1.1.0"
sqlalchemy = "^1.4.46"
flask-sqlalchemy = "^3.0.2"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
python-socketio = "^5.7.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
